<resources>
    <string name="app_name">We Make Pass</string>

    <string name="user_id_guidelines">– 아이디는 영문(a–z, A-Z), 숫자(0-9)만 사용 가능합니다.\n- 아이디
        길이는 6자 이상 20자 이하여야 합니다.</string>
    <string name="nickname_guidelines">- 닉네임은 한글, 영문(a-z, A-Z), 숫자(0-9)만 사용 가능합니다.\n-
        한글 기준 2~8자, 숫자와 영문 기준 4~16자 제한입니다.</string>
    <string name="password_guidelines">- 비밀번호는 10자 이상 20자 이하로 영문(a-z, A-Z), 숫자, 특수 문자가
        모두 포함되어야 합니다.\n- 사용 가능한 특수 문자는 !@#$%^&amp;* 입니다.</string>
    <string name="current_password_auth_guidelines"> 현재 비밀번호를 확인해 일치할 경우 비밀번호 변경
        화면으로 넘어갑니다.</string>
    <string name="email_guidelines">- 이메일은 본인 인증 수단 및 비밀번호 찾기에 사용됩니다.\n- 이메일을
        허위로 입력할 경우 본인 인증이 불가능할 수 있으며 본인 인증이 되지 않을 경우 모든 서비스 이용이
        제한됩니다.</string>
    <string name="email_cert_guidelines">- 전송된 이메일은 3분간 유효합니다.\n- 제한 시간 내 인증을 완료하지
        못한 경우 다시 요청해주세요.</string>
    <string name="password_reset_guidelines">새롭게 사용할 비밀번호를 설정합니다. 단, 이전 비밀번호를
        재사용할 수 없습니다.</string>
    <string name="exam_select_guidelines"> 시험 종목을 선택하면 선택할 수 있는 년도를 불러옵니다. 년도를
        선택하면 회차가 로딩되고 회차를 선택하면 구분이 로딩됩니다. 마지막으로 구분을 선택하면 시험 시작 버튼이
        활성화됩니다.</string>

    <string name="exam_guide_pass_commentary">
        - 100점 만점 기준 60점 이상을 획득해야 합니다.\n
        - 과목으로 나누어진 경우 한 과목이라도 100점 만점에 40점 이상을 넘지 못하면 총점이 60점을 넘겼다 해도
         과락으로 불합격될 수 있습니다.
    </string>
    <string name="exam_guide_app_commentary">
        - 아래 "시험시작" 버튼을 누르면 시험이 시작됩니다.\n
        - 각 문항에서 "이전" 혹은 "다음" 버튼을 눌러 다른 문항으로 이동할 수 있습니다.\n
        - 좌측 상단의 메뉴 버튼을 선택하여 원하는 문항으로 즉시 이동할 수 있습니다.\n
        - 필기의 경우 5개 내지 4개의 문항이 존재합니다. 답이라고 생각되는 문항을 선택한 뒤 "다음" 버튼을 선택하면
        다음 문항으로 이동합니다.\n
        - 문항 목록에서 풀지 않은 문항은 검은색, 해결한 문항은 초록색으로 표기됩니다.\n
        - 우측 상단에 표시된 타이머가 시험 제한 시간입니다. 실제 시험 제한 시간과 같게 표시됩니다.\n
        - 제한 시간보다 빨리 시험을 완료했을 경우 좌측 상단의 메뉴 버튼을 눌러 "시험 종료" 버튼을 선택하면 제한
        시간을 기다리지 않아도 시험을 종료할 수 있습니다.\n
        - 정확한 시험 시간 측정을 위해서 시험 도중 어플리케이션을 백그라운드 상태로 전환하거나 다른 어플리케이션을
        실행하여도 타이머는 계속 실행됩니다.\n
        - 제한 시간 내에 시험을 다 풀지 못할 경우 시험이 자동으로 종료되고 채점이 이루어집니다.
    </string>
    <string name="exam_guide_tip_commentary">
        - 어렵다고 느끼는 문제에 너무 시간을 쓰지 않는 것이 좋습니다. 풀 수 있는 문제를 먼저 풀고 어려운 문제는
        나중에 마지막에 푸는 것이 좋습니다. 실전에서 어려운 문제에 묶여 시간을 너무 소비하게 되면 오히려 쉬운 문제를
        풀 기회마저 잃을 수 있습니다.\n
        - 공부를 아무리 많이 하고 시험을 봐도 처음 보는 개념이 나올 수 있습니다. 전혀 모르는 문제가 나왔을 땐
        모의시험인 만큼 답을 체크하지 말고 틀린 후 다시 풀어보는 것이 더 나을 수도 있습니다. 모의시험에서 무작위로
        답을 체크하고 운좋게 고점수를 획득하여 합격하는 것은 실전에 아무런 도움도 되지 않습니다.\n
        - 시험 도서는 대부분 꼭 필요한 핵심 내용들로 요약되어 있습니다. 모의고사 중 모르는 것이 나왔을 땐 시험
        도서도 좋지만 인터넷 검색을 활용하는 것도 좋습니다.\n
        - 실전에서 OMR 카드를 작성해야 하는 경우, 답안 작성 시간을 염두해두고 모의시험에 응시해야 합니다.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>