<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.wemakepass.view.auth.signUp.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_sign_up_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/baltic_sea"
        android:clickable="true"
        tools:context=".view.auth.signUp.SignUpFragment">

        <ScrollView
            android:id="@+id/fragment_sign_up_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_button"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/fragment_sign_up_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_height"
                    app:contentInsetStart="0dp"
                    app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_id_text_layout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="회원가입" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_sign_up_id_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:theme="@style/Theme.TextInputLayout"
                    app:endIconDrawable="@drawable/baseline_close_24"
                    app:endIconMode="clear_text"
                    app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_id_guide_text_view"
                    app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_toolbar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_sign_up_id_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="아이디"
                        android:inputType="text"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:text="@={viewModel.idLiveData}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fragment_sign_up_id_guide_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/user_id_guidelines"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_nickname_text_layout"
                    app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_id_text_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_sign_up_nickname_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:theme="@style/Theme.TextInputLayout"
                    app:endIconDrawable="@drawable/baseline_close_24"
                    app:endIconMode="clear_text"
                    app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_nickname_guide_text_view"
                    app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_id_guide_text_view">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_sign_up_nickname_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="닉네임"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:text="@={viewModel.nicknameLiveData}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fragment_sign_up_nickname_guide_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/nickname_guidelines"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_password_text_layout"
                    app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_nickname_text_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_sign_up_password_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:theme="@style/Theme.TextInputLayout"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_password_re_text_layout"
                    app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_nickname_guide_text_view"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_sign_up_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="비밀번호 (영문, 숫자, 특수 문자 조합)"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:text="@={viewModel.passwordLiveData}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_sign_up_password_re_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:theme="@style/Theme.TextInputLayout"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_password_guide_text_view"
                    app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_password_text_layout"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_sign_up_password_re_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="비밀번호 확인"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:text="@={viewModel.passwordReLiveData}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fragment_sign_up_password_guide_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/password_guidelines"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_email_text_layout"
                    app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_password_re_text_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_sign_up_email_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.TextInputLayout"
                    app:endIconDrawable="@drawable/baseline_close_24"
                    app:endIconMode="clear_text"
                    app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_email_guide_text_view"
                    app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_password_guide_text_view">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_sign_up_email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="이메일 주소"
                        android:inputType="textEmailAddress"
                        android:maxLength="320"
                        android:maxLines="1"
                        android:text="@={viewModel.emailLiveData}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fragment_sign_up_email_guide_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/email_guidelines"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_email_text_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:onClick="@{viewModel::onSignUpButtonClick}"
            android:background="@drawable/bg_r15_ship_cove"
            android:text="회원가입"
            android:textSize="@dimen/font_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_scroll_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>